third_party/move/move-compiler-v2/tests/checking/naming/spec_fun_in_code.exp

Diagnostics:
error: no function named `M::foo` found
  ┌─ tests/checking/naming/spec_fun_in_code.move:5:9
  │
5 │         foo(1) // not visible
  │         ^^^^^^
